--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=Simple spring project
+spring.application.name=wemove
 
 spring.datasource.url=jdbc:h2:mem:userdb
 spring.datasource.driverClassName=org.h2.Driver
