--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,10 @@ spring.datasource.username=mouadh
 spring.datasource.password=mouadh
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto= update
+spring.jpa.properties.hibernate.format_sql = true
+spring.sql.init.mode=always
 
 spring.h2.console.enabled=true
 # default path: h2-console
